# Nav2_CrowdNav_HEIGHT

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  nav2py_crowdnav_height_controller.xml  nav2py_pas_crowdnav_controller.xml  package.xml  param.yaml  pyproject.toml  test_model.py
include/nav2py_crowdnav_height_controller/: height_crowdnav_controller.hpp
include/nav2py_pas_crowdnav_controller/: pas_crowdnav_controller.hpp
include/nav2py_template_controller/: template_controller.hpp
nav2py_crowdnav_height_controller/: setup.py
nav2py_crowdnav_height_controller/nav2py_crowdnav_height_controller/: __main__.py  height_controller.py
nav2py_pas_crowdnav_controller/: __main__.py  pas_controller.py  setup.py
nav2py_pas_crowdnav_controller/PaS_CrowdNav/crowd_nav/configs/: config.py
nav2py_pas_crowdnav_controller/PaS_CrowdNav/rl/: model.py  ppo.py
nav2py_pas_crowdnav_controller/PaS_CrowdNav/rl/vec_env/: dummy_vec_env.py  envs.py  shmem_vec_env.py  vec_normalize.py
nav2py_pas_crowdnav_controller/nav2py_pas_crowdnav_controller/: __main__.py  pas_controller.py
nav2py_template_controller/nav2py_template_controller/: __main__.py  pas_controller.py
src/: height_crowdnav_controller.cpp  pas_crowdnav_controller.cpp  template_controller.cpp
