[project]
name = "nav2py_crowdnav_height_controller"
version = "0.1.0"
description = "CrowdNav HEIGHT controller for ROS2 Navigation stack"
readme = "README.md"
requires-python = "==3.8.*"
dependencies = [
    "pyyaml",
    "torch",
    "torchvision",
    "numpy==1.23.*",
    "matplotlib",
    "scipy",
    "Cython",
    "gym"
]
